--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "sharp": "^0.34.2",
+    "tailwind-variants": "^1.0.0",
     "tailwindcss": "^4.1.8"
   }
 }
