--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "astro": "^5.9.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "remark-toc": "^9.0.0",
     "sharp": "^0.34.2",
     "tailwind-variants": "^1.0.0",
     "tailwindcss": "^4.1.8"
