--- a/package.json
+++ b/package.json
@@ -13,15 +13,23 @@
     "@astrojs/react": "^4.3.0",
     "@astrojs/rss": "^4.0.12",
     "@astrojs/sitemap": "^3.4.1",
+    "@radix-ui/react-navigation-menu": "^1.2.13",
     "@tailwindcss/vite": "^4.1.8",
     "@types/react": "^19.1.6",
     "@types/react-dom": "^19.1.6",
     "astro": "^5.9.1",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.518.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "remark-toc": "^9.0.0",
     "sharp": "^0.34.2",
+    "tailwind-merge": "^3.3.1",
     "tailwind-variants": "^1.0.0",
     "tailwindcss": "^4.1.8"
+  },
+  "devDependencies": {
+    "tw-animate-css": "^1.3.4"
   }
 }
