--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "tailwindcss": "^4.1.8"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.16",
     "tw-animate-css": "^1.3.4"
   }
 }
